[tool.poetry]
name = "rest-marketplace"
version = "0.1.0"
description = "REST API for item management on marketplace."
authors = ["Eugene <giveuper39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
peewee = "^3.17.6"
psycopg2-binary = "^2.9.9"
types-peewee = "^3.17.6.20241014"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.6.9"
pytest = "^8.3.3"
pytest-coverage = "^0.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
pythonpath = [
    ".", "app",
]
[tool.black]
line-length = 105


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
